# fieldflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.agents/skills/fieldflow-cli/: SKILL.md
.agents/skills/fieldflow-cli/agents/: openai.yaml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
app/: config.py  proxy.py
claude_config_example/: claude_desktop_config.json
claude_config_example/skills/fieldflow-mcp-setup/: SKILL.md
examples/: jsonplaceholder_openapi.yaml  n8n_openapi.yaml
fieldflow/: __init__.py  auth.py  cli.py  cli_runner.py  config.py  field_query.py  http_app.py  openapi_loader.py  proxy.py  spec_parser.py  tooling.py  utils.py
fieldflow.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fieldflow_mcp/: cli.py  server.py
fieldflow_mcp/proxy/: __init__.py  cli.py  config.py  init.py  oauth.py  server.py  session.py  tokens.py
mcp/: __init__.py  cli.py  server.py
scripts/: demo_manifest_gh.sh
skills/fieldflow-smart-discovery/: SKILL.md
skills/fieldflow-smart-discovery/references/: agent-instruction-template.md
tests/: conftest.py  test_app.py  test_auth.py  test_cli.py  test_field_selector.py  test_mcp.py  test_proxy.py  test_spec_parser.py
