[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fieldflow"
version = "0.1.0"
description = "Generate FieldFlow servers that expose OpenAPI REST APIs as field-filtered tools for HTTP or MCP clients."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "Guillaume Gay", email = "guillaume.gay@protonmail.com" }
]
keywords = ["mcp", "fastapi", "openapi", "proxy", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Framework :: FastAPI",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
  "fastapi>=0.135.3",
  "httpx>=0.28.1",
  "pydantic>=2.13.0",
  "PyYAML>=6.0.3",
  "uvicorn[standard]>=0.44.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.4.3",
  "black>=26.3.1,<27",
  "ruff>=0.15.10",
  "mypy>=1.20.1",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
]

mcp = [
  "mcp>=1.27.0",
]

proxy = [
  "mcp>=1.27.0",
  "keyring>=25.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
target-version = ["py311", "py312"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fieldflow*", "fieldflow_mcp*"]

[project.scripts]
fieldflow = "fieldflow.cli:main"
fieldflow-cli = "fieldflow.cli:run_cli_main"
fieldflow-mcp = "fieldflow_mcp.cli:main"
mcp-proxy = "fieldflow_mcp.cli:legacy_entrypoint"
